objects/MFG_Recommended_Part__c.object
<CustomObject>
    <fields>
        <fullName>MFG_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipName>MFG_Recommended_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MFG_Commerce_Link__c</fullName>
        <label>Commerce Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFG_Link__c</fullName>
        <formula>HYPERLINK( MFG_Commerce_Link__c ,&quot;Click to Purchase&quot;,&quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFG_PartName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Name</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Recommended Parts</relationshipLabel>
        <relationshipName>Recommended_Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MFG_Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Work Order</fullName>
                </value>
                <value>
                    <fullName>APM</fullName>
                </value>
                <value>
                    <fullName>Tech</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MFG_StoreURL__c</fullName>
        <formula>HYPERLINK( MFG_Commerce_Link__c ,&quot;Link to Storefront&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StoreURL</label>
        <type>Text</type>
    </fields>
    <label>Recommended Part</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MFG_PartName__c</columns>
        <columns>MFG_Asset__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Recommended Part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recommended Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>